<resources>
    <string name="app_name">Business Times</string>
    <string name="image_background">image background</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="btn_register">Registrarse</string>
    <string name="copyright">© Copyright 2023 Enoc</string>
    <string name="slogan_part1">Registra</string>
    <string name="slogan_part2">Gestiona</string>
    <string name="slogan_part3">y</string>
    <string name="slogan_part4">Gana</string>
    <string name="slogan_part5">dinero</string>
    <string name="slogan_part6">en tu negocio</string>
    <string name="welcome">Bienvendo!</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="create_account">Crea tu cuenta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_earnings">Por cobrar</string>
    <string name="default_money">0 $</string>
    <string name="default_clients">0 Clientes</string>
    <string name="tittle_expenses">Por pagar</string>
    <string name="default_providers">0 Proveedores</string>
    <string name="hint_search">Buscar elemento</string>
    <string name="zero">0</string>
    <string name="name">nombre</string>
    <string name="new_earning">Nueva venta</string>
    <string name="new_expense">Nuevo gasto</string>
    <string name="clients">Clientes</string>
    <string name="providers">Proveedores</string>
    <string name="settings_account">Ajustes de la cuenta</string>
    <string name="hint_price">Introduzca el precio</string>
    <string name="hint_details">Introduzca detalles </string>
    <string name="note">Nota: los campos con * son obligatorios</string>
    <string name="text_required">*</string>
    <string name="selec_client">Seleccione un cliente</string>
    <string name="add">agregar</string>
    <string name="total_clients">Total de clientes</string>
    <string name="add_client">Crear cliente</string>
    <string name="add_provide">Crear Proveedor</string>
    <string name="name_client">Introduzca el nombre</string>
    <string name="lastname_client">Introduzca el apellido</string>
    <string name="cancel">Cancelar</string>
    <string name="resume">Resumen</string>
    <string name="btn_add_payment">Agregar abono</string>
    <string name="leave">Cerrar Sesión</string>
    <string name="payment_tittle">Historial de abonos</string>
    <string name="total_provider">Total de proveedores</string>
</resources>