<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageWelcome"
        android:layout_width="405dp"
        android:layout_height="434dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/image_welcome"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="253dp"
        android:layout_height="58dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/btn_login"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lblDontAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblDontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/dont_have_account"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/btn_register"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblCopyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/slogan_part1"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lblSlogan2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblSlogan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/slogan_part2"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lblSlogan4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblSlogan4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/slogan_part4"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lblSlogan6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblSlogan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/slogan_part3"
        android:textColor="@color/text"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/lblSlogan5"
        app:layout_constraintStart_toEndOf="@+id/lblSlogan2" />

    <TextView
        android:id="@+id/lblSlogan5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/slogan_part5"
        android:textColor="@color/text"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/lblSlogan6"
        app:layout_constraintStart_toEndOf="@+id/lblSlogan4" />

    <TextView
        android:id="@+id/lblSlogan6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/slogan_part6"
        android:textColor="@color/text"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>