<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="650dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <EditText
        android:id="@+id/txtNameClientAdd"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name_client"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtLastNameClientAdd"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/lastname_client"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNew"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/add"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/cancel"
        android:textSize="20sp" />
</androidx.cardview.widget.CardView>