<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.NewVentsActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/imgBackground"
        android:layout_width="550dp"
        android:layout_height="500dp"
        android:layout_marginTop="-300dp"
        android:background="@drawable/header_backgroud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_white"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/image_background" />

    <TextView
        android:id="@+id/tittleActivityVent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/new_earning"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPriceE"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/hint_price"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBackground" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/hint_details"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceE"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spProviders"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNew"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>