<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:background="@color/background">
    <TextView
        android:id="@+id/lblCopyright2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/headerBackGround"
        android:layout_width="500dp"
        android:layout_height="450dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="280dp"
        android:background="@drawable/header_backgroud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="750dp"
        android:background="@drawable/card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/create_account"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/headerBackGround"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtUserNameR"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/hint_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/lblCreateAccount" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/hint_last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPaswordR"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/hint"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/txtUserNameR" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/delius_unicase"
        android:text="@string/btn_register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        tools:ignore="TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>